tests/baselines/reference/subtypingWithObjectMembers2.errors.txt
==== tests/cases/compiler/subtypingWithObjectMembers2.ts (6 errors) ====
    interface Base {
        foo: string;
    }
    
    interface Derived extends Base {
        bar: string;
    }
    
    // N and M have the same name, same accessibility, same optionality, and N is a subtype of M
    // foo properties are valid, bar properties cause errors in the derived class declarations
    module NotOptional {
        interface A {
            foo: Base;
            bar: Base;
        }
    
        interface B extends A {
                  ~
!!! subtypingWithObjectMembers2.ts(17,15): error TS2143: Interface 'NotOptional.B' cannot extend interface 'NotOptional.A':
!!! 	Types of property 'bar' of types 'B' and 'A' are incompatible:
!!! 		Type 'String' is missing property 'foo' from type 'Base'.
            foo: Derived; // ok
            bar: string; // error
        }
    
        interface A2 {
            1: Base;
            2.0: Base;
        }
    
        interface B2 extends A2 {
                  ~~
!!! subtypingWithObjectMembers2.ts(27,15): error TS2143: Interface 'NotOptional.B2' cannot extend interface 'NotOptional.A2':
!!! 	Types of property '2.0' of types 'B2' and 'A2' are incompatible:
!!! 		Type 'String' is missing property 'foo' from type 'Base'.
            1: Derived; // ok
            2: string; // error
        }
    
        interface A3 {
            '1': Base;
            '2.0': Base;
        }
    
        interface B3 extends A3 {
                  ~~
!!! subtypingWithObjectMembers2.ts(37,15): error TS2143: Interface 'NotOptional.B3' cannot extend interface 'NotOptional.A3':
!!! 	Types of property ''2.0'' of types 'B3' and 'A3' are incompatible:
!!! 		Type 'String' is missing property 'foo' from type 'Base'.
            '1': Derived; // ok
            '2.0': string; // error
        }
    }
    
    // same cases as above but with optional
    module Optional {
        interface A {
            foo?: Base;
            bar?: Base;
        }
    
        interface B extends A {
                  ~
!!! subtypingWithObjectMembers2.ts(50,15): error TS2143: Interface 'Optional.B' cannot extend interface 'Optional.A':
!!! 	Types of property 'bar' of types 'B' and 'A' are incompatible:
!!! 		Type 'String' is missing property 'foo' from type 'Base'.
            foo?: Derived; // ok
            bar?: string; // error
        }
    
        interface A2 {
            1?: Base;
            2.0?: Base;
        }
    
        interface B2 extends A2 {
                  ~~
!!! subtypingWithObjectMembers2.ts(60,15): error TS2143: Interface 'Optional.B2' cannot extend interface 'Optional.A2':
!!! 	Types of property '2.0' of types 'B2' and 'A2' are incompatible:
!!! 		Type 'String' is missing property 'foo' from type 'Base'.
            1?: Derived; // ok
            2?: string; // error
        }
    
        interface A3 {
            '1'?: Base;
            '2.0'?: Base;
        }
    
        interface B3 extends A3 {
                  ~~
!!! subtypingWithObjectMembers2.ts(70,15): error TS2143: Interface 'Optional.B3' cannot extend interface 'Optional.A3':
!!! 	Types of property ''2.0'' of types 'B3' and 'A3' are incompatible:
!!! 		Type 'String' is missing property 'foo' from type 'Base'.
            '1'?: Derived; // ok
            '2.0'?: string; // error
        }
    }